# cellhop

./: README.md
cellhop/: LICENSE  README.md  README_zh.md  demo.R  demo.py
cellhop/R/: DESCRIPTION  NAMESPACE  README.md  test_smoke.R
cellhop/R/R/: seurat_to_anndata.R  zzz.R
cellhop/python/: README.md  pyproject.toml  test_smoke.py
cellhop/python/src/cellhop/: __init__.py  _compat.py  convert.py
