[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellhop"
version = "0.0.1"
description = "One-liners to hop between Python AnnData and R Seurat without exposing intermediate files"
readme = "../README.md"
authors = [{name = "Nigmat Rahim", email = "nigmatrahim@stu.pku.edu.cn"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "anndata>=0.8",
  "rpy2>=3.5"
]

[project.urls]
Homepage = "https://github.com/nigmatrahim/cellhop"
